--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    background-color: black;
+    font-family: arial;
+    color: white
+}
 
+h1 {
+    color: grey;
+    font-family: verdana
+}
 
+.maindiv {
+    background-color: white;
+    color: black;
+    width: 550px;
+    padding: 20px;
+    border-radius: 25px;
+    margin: 0 auto;
+}
+
+.maindiv .inner {
+    padding: 0px 85px;
+}
+
+.maindiv label {
+    width: 110px;
+    display: inline-block;
+    margin-bottom: 9px;
+}
